<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="8dp">


        <ImageView
            android:id="@+id/imv_my_cards"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_baseline_credit_card_24"
            app:layout_constraintBottom_toTopOf="@id/txt_my_cards"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_my_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mis_tarjetas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imv_pay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_payments_24"
            app:layout_constraintBottom_toTopOf="@id/txt_pay"
            app:layout_constraintEnd_toStartOf="@id/imv_movements"
            app:layout_constraintStart_toEndOf="@id/imv_my_cards"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_pay"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/pagar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imv_movements"
            app:layout_constraintStart_toEndOf="@id/imv_my_cards" />

        <ImageView
            android:id="@+id/imv_movements"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_list_24"
            app:layout_constraintBottom_toTopOf="@id/txt_movements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_movements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mis_movimientos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>